--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "RTRD",
+  "name": "rtrd",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -22,6 +22,9 @@
   },
   "homepage": "https://github.com/ZioVio/RTRD#readme",
   "dependencies": {
-    "concurrently": "^5.1.0"
+    "concurrently": "^5.1.0",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-import": "^2.20.1"
   }
 }
